--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+body{
+    min-height: 100vh;
+}
 header{
     background-color: #FFFBF5;
     /* border-bottom: 4px solid black;     i want to  add this but ill keep it here if i wanted to change some design in the website*/
@@ -54,8 +57,51 @@ main .home{
     background-color: white;
 }
 footer{
-    height: 20%;
+    margin-top: 100%;
+    height: 100px;
     width: 100%;
-    border: 1px solid;
+    border: solid;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    position:relative;
+    background:#7743DB ;
+    padding: 20px 50px;
+    flex-direction: column;
+}
+footer .socials{
+    position:relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap ;
+    text-decoration: none;
+}
+
+footer .socials li, .footer-page-links li{
+    list-style: none;
+    justify-content: space-between;
+}
+footer .socials li a{
+    font-size: 2em;
+    color: black;
+    margin: 0 10px;
+    display: inline-block;
+}
+footer .footer-page-links li a{
+    font-size: 1em;
+    color:#3a2669;
+    text-decoration: none;
+    padding-top: 0;
+    margin-top: 0;
+    margin-bottom: 20px;
+    opacity: 0.75em;
+}
+footer .footer-page-links li a:hover{
+    color: #F7EFE5;
+    transition: 0.3s;
+}
+footer p{
+    color: #F7EFE5;
+    font-size: 0.35em;
 }
