--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ header ul li{
     display: inline-block;
 }
 header h2 img{
-    font-size: 40px;
     box-shadow: #FFFBF5;
+    size: fixed;
 }
 header nav{
     list-style: none;
@@ -36,16 +36,13 @@ header nav{
 }
 header nav a{
     text-decoration: none;
+    color:#4c317e;
     font-size: 100%;
     font-weight: 600;
     padding: 8px 16px;
     border-radius: 99px;
     transition: 0.3s;
 }
-/* header nav a.active{
-    background: #7743DB ; #7469B6
-    color: white;
-} */
 header nav a:hover{
     background: #7743DB;
     color: white;
@@ -53,14 +50,15 @@ header nav a:hover{
 header nav ul li:hover > a:not(:hover){
     background: none;
 }
+
 main .home{
     background-color: white;
 }
 footer{
     margin-top: 100%;
-    height: 100px;
+    height: 100%;
     width: 100%;
-    border: solid;
+    border: 1px #FFD23F;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -87,21 +85,31 @@ footer .socials li a{
     color: black;
     margin: 0 10px;
     display: inline-block;
+    transition: 0.5s;
+}
+footer .socials li a:hover{
+    transform: translateY(-10px);
 }
 footer .footer-page-links li a{
-    font-size: 1em;
-    color:#3a2669;
+
+    padding: 8px 16px;
+    font-size: 0.9em;
+    color:#23124b;
     text-decoration: none;
     padding-top: 0;
     margin-top: 0;
     margin-bottom: 20px;
-    opacity: 0.75em;
+    opacity: 0.5;
+    justify-content: space-between;
 }
 footer .footer-page-links li a:hover{
-    color: #F7EFE5;
+    border-radius: 80px;
+    padding: auto;
+    opacity: 1;
     transition: 0.3s;
 }
 footer p{
-    color: #F7EFE5;
+    color: #FDF0D1;
     font-size: 0.35em;
+    margin: 10px;
 }
